There are some bugs on my css code

--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -1,4 +1,3 @@
-
 .message {
   padding: 10px;
   margin: 10px;
@@ -13,6 +12,7 @@
 
 .message__userCard{
   background-color: #0bB1ff !important;
+  color: white;
 }
 
 .message__guestCard{
